--- a/install/Cargo.toml
+++ b/install/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "tb_install"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 whoami = "1.1"
 # beep = "0.3.0"
